# rust-stuff

octree/: Cargo.toml
octree-rs/: Cargo.toml
octree-rs/src/: benches.rs  main.rs  octree.rs
octree-rs/src/benches/: ray_casts.rs
octree/src/: generation.rs  main.rs  octree.rs  storage.rs
rust-cli/: Cargo.toml
rust-cli/src/: main.rs  schedule.rs
rust-cli/src/ingest/: mod.rs  rule34xxx.rs  unified.rs
rust-rendering/: Cargo.toml
tasks/src/: main.rs  tasks.rs
vulkan-rust/: .gitignore  Cargo.toml  README.md
vulkan-rust/assets/: dungeon.vox  grass.vox  tree.vox
vulkan-rust/crates/: gfxrecon_capture_20230924T195528.gfxr  gfxrecon_capture_20230924T200237.gfxr  gfxrecon_capture_20230924T200525.gfxr  gfxrecon_capture_20230926T230800.gfxr
vulkan-rust/crates/engine/: Cargo.toml
vulkan-rust/crates/engine/src/: camera.rs  chunk_stream.rs  gamestate.rs  input.rs  lib.rs  player.rs  sound.rs  stats.rs  world_thread.rs
vulkan-rust/crates/engine/src/device/: logical.rs  mod.rs  physical.rs  queuefamilies.rs  swapchainsupport.rs
vulkan-rust/crates/engine/src/graphics/: mesh_generator.rs  mod.rs
vulkan-rust/crates/engine/src/models/: mod.rs
vulkan-rust/crates/engine/src/render/: mod.rs  render_distance.rs
vulkan-rust/crates/engine/src/resources/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
vulkan-rust/crates/engine/src/systems/: health.rs  mod.rs  physics.rs
vulkan-rust/crates/game/: Cargo.toml
vulkan-rust/crates/game/src/: main.rs
vulkan-rust/crates/gamedata/: Cargo.toml
vulkan-rust/crates/gamedata/src/: lib.rs  locode.rs  material.rs  quest.rs  vector.rs
vulkan-rust/crates/geometry/: Cargo.toml
vulkan-rust/crates/geometry/src/: aabb.rs  lib.rs  ray.rs  sphere.rs
vulkan-rust/crates/graphics/: Cargo.toml
vulkan-rust/crates/graphics/src/: aabb.rs  camera.rs  collision.rs  frustum.rs  input.rs  lib.rs  mesh.rs  ray.rs  raycast.rs  vertex.rs
vulkan-rust/crates/logging/: Cargo.toml
vulkan-rust/crates/logging/src/: lib.rs
vulkan-rust/crates/mapviewer/: Cargo.toml
vulkan-rust/crates/mapviewer/src/: main.rs
vulkan-rust/crates/octree/: Cargo.toml
vulkan-rust/crates/octree/src/: lib.rs  octree.rs  vec.rs
vulkan-rust/crates/octree/src/benches/: tree_operations.rs
vulkan-rust/crates/octree2/: Cargo.toml
vulkan-rust/crates/octree2/src/: lib.rs  manager.rs  node.rs  position.rs
vulkan-rust/crates/palette/: Cargo.toml
vulkan-rust/crates/palette/src/: lib.rs
vulkan-rust/crates/resources/: Cargo.toml
vulkan-rust/crates/resources/src/: cache.rs  image.rs  lib.rs  voxel.rs
vulkan-rust/crates/threadpool/src/: lib.rs  pool.rs  worker.rs
vulkan-rust/crates/vk_util/: Cargo.toml
vulkan-rust/crates/vk_util/src/: app.rs  appdata.rs  buffer.rs  command.rs  constants.rs  debug.rs  image.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  renderpass.rs  swapchain.rs  uinform.rs  uniform.rs
vulkan-rust/crates/vk_util/src/device/: logical.rs  memory.rs  mod.rs  physical.rs  queuefamilies.rs  swapchainsupport.rs
vulkan-rust/crates/world/: Cargo.toml
vulkan-rust/crates/world/src/: chunk_generator.rs  chunk_id.rs  chunk_manager.rs  fixed_tree.rs  lib.rs  mesh_generator.rs  mesh_manager.rs  seed.rs  slice.rs  terrain_noise.rs  traits.rs  world_parameters.rs  world_position.rs
vulkan-rust/crates/world/src/mgmt/: chunk.rs
vulkan-rust/crates/xtask/: Cargo.toml
vulkan-rust/crates/xtask/src/: main.rs
vulkan-rust/gfxrecon_capture_20231002T214319.gfxr.shaders/: sh16
vulkan-rust/shader/: frag.spv  shader.frag  shader.vert  vert.spv
vulkan-training/: Cargo.toml
vulkan-training/src/: ashapp.rs  creatures.rs  main.rs  math.rs  matrix.rs  physics.rs  position.rs  types.rs
