[package]
name = "engine"
version = "0.0.0"
edition = "2021"

[lib]


[dependencies]
anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.10"
png = "0.16"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = "2"
vulkanalia = { version = "=0.14.0", features = ["libloading", "window"] }
winit = "0.24"
gamedata = {path = "../gamedata", version = "0.0.0"}
octree = {path = "../octree", version = "0.0.0"}
world = {path = "../world", version = "0.0.0"}
graphics = {path = "../graphics", version = "0.0.0"}
simdnoise = "3.1.6"
rayon = "1.6.1"
