[package]
name = "engine"
version = "0.0.0"
edition = "2021"

[lib]


[dependencies]
anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.10"
png = "0.16"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = "2"
vulkanalia = { version = "=0.14.0", features = ["libloading", "window"] }
winit = "0.24"
gamedata = { path = "../gamedata" }
threadpool = { path = "../threadpool" }
world = { path = "../world" }
graphics = { path = "../graphics" }
palette = { path = "../palette" }
vk_util = { path = "../vk_util" }
simdnoise = "3.1.6"
egui = "0.22.0"
egui-winit = "0.22.0"
