[package]
name = "engine"
version = "0.0.0"
edition = "2021"

[dependencies]
gamedata.workspace = true
threadpool.workspace = true
geometry.workspace = true
world.workspace = true
graphics.workspace = true
palette.workspace = true
vk_util.workspace = true
logging.workspace = true
anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.10"
png = "0.16"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = "2"
vulkanalia = { version = "=0.14.0", features = ["libloading", "window"] }
winit = "0.24"
simdnoise = "3.1.6"
egui = "0.22.0"
egui-winit = "0.22.0"
rayon = "1.8.0"
#fmod = "0.10.2"
#libc = "0.2.148"
