[package]
name = "game"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "game"

[dependencies]
anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.10"
png = "0.16"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = "2"
vulkanalia = { version = "=0.14.0", features = ["libloading", "window"] }
winit = "0.24"
engine = { path = "../engine", version = "0.0.0" }
gamedata = { path = "../gamedata", version = "0.0.0" }