[package]
name = "vk_util"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkanalia = { version = "=0.14.0", features = ["libloading", "window"] }
anyhow = "1"
winit = "0.24"
log = "0.4"
gamedata.workspace = true
geometry.workspace = true
world.workspace = true
graphics.workspace = true
palette.workspace = true
resources.workspace = true
logging.workspace = true
thiserror = "1"
nalgebra-glm = "0.10"
png = "0.16"
