[package]
name = "world"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.10"
rand = "0.8.5"
fastrand = "2.0.0"
simdnoise = "3.1.6"
gamedata = {path = "../gamedata"}
graphics = {path = "../graphics"}
octree = {path = "../octree"}
bitvec = "1.0.1"
